--- a/SourceCode/Backend/Zpotdrop/composer.json
+++ b/SourceCode/Backend/Zpotdrop/composer.json
@@ -13,7 +13,8 @@
         "predis/predis": "^1.0",
         "nesbot/carbon": "^1.20",
         "doctrine/dbal": "^2.5",
-        "barryvdh/laravel-debugbar": "^2.0"
+        "barryvdh/laravel-debugbar": "^2.0",
+        "league/fractal": "^0.12.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
