--- a/SourceCode/Backend/Zpotdrop/composer.json
+++ b/SourceCode/Backend/Zpotdrop/composer.json
@@ -14,7 +14,8 @@
         "nesbot/carbon": "^1.20",
         "doctrine/dbal": "^2.5",
         "barryvdh/laravel-debugbar": "^2.0",
-        "league/fractal": "^0.12.0"
+        "league/fractal": "^0.12.0",
+      "lucadegasperi/oauth2-server-laravel": "5.0.*@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
