Layout Login, Signup, Complete Signup

--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/Info.plist
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>PTS76F.ttf</string>
+		<string>PTS75F.ttf</string>
+		<string>PTS56F.ttf</string>
+		<string>PTS55F.ttf</string>
+		<string>PTC77F.ttf</string>
+		<string>PTC57F.ttf</string>
+		<string>PTC75F.ttf</string>
+		<string>PTC55F.ttf</string>
+	</array>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
