--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/Info.plist
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/Info.plist
@@ -2,19 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string>PTS76F.ttf</string>
-		<string>PTS75F.ttf</string>
-		<string>PTS56F.ttf</string>
-		<string>PTS55F.ttf</string>
-		<string>PTC77F.ttf</string>
-		<string>PTC57F.ttf</string>
-		<string>PTC75F.ttf</string>
-		<string>PTC55F.ttf</string>
-	</array>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -33,8 +20,21 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>PTS76F.ttf</string>
+		<string>PTS75F.ttf</string>
+		<string>PTS56F.ttf</string>
+		<string>PTS55F.ttf</string>
+		<string>PTC77F.ttf</string>
+		<string>PTC57F.ttf</string>
+		<string>PTC75F.ttf</string>
+		<string>PTC55F.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -43,11 +43,11 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
