--- a/SourceCode/Backend/Zpotdrop/composer.json
+++ b/SourceCode/Backend/Zpotdrop/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "barryvdh/laravel-ide-helper": "^2.0",
-        "jlapp/swaggervel": "*@dev",
+        "jlapp/swaggervel": "dev-master",
         "intervention/image": "^2.3",
         "predis/predis": "^1.0",
         "nesbot/carbon": "^1.20",
@@ -21,7 +21,7 @@
         "iron-io/iron_mq": "^2.0",
         "davibennun/laravel-push-notification": "dev-laravel5",
         "vinkla/hashids": "^2.0",
-        "codeception/codeception": "*"
+        "codeception/codeception": "2.1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
