--- a/SourceCode/Backend/Zpotdrop/composer.json
+++ b/SourceCode/Backend/Zpotdrop/composer.json
@@ -33,7 +33,8 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "app/Acme/Collections"
         ],
         "psr-4": {
             "App\\": "app/"
