--- a/SourceCode/Android/Zpotdrop/app/build.gradle
+++ b/SourceCode/Android/Zpotdrop/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.0.1'
     compile 'com.parse:parse-android:1.10.1'
     compile files('libs/ParseFacebookUtilsV4-1.10.1.jar')
+    compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
 }
