--- a/SourceCode/Android/Zpotdrop/app/build.gradle
+++ b/SourceCode/Android/Zpotdrop/app/build.gradle
@@ -19,12 +19,20 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
-    compile 'com.parse:parse-android:1.10.1'
-    compile files('libs/ParseFacebookUtilsV4-1.10.1.jar')
+    //compile 'com.parse:parse-android:1.10.1'
+    //compile files('libs/ParseFacebookUtilsV4-1.10.1.jar')
     compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    compile('com.github.afollestad.material-dialogs:core:0.8.5.0@aar') {
+        transitive = true
+    }
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
