--- a/SourceCode/Android/Zpotdrop/app/build.gradle
+++ b/SourceCode/Android/Zpotdrop/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.github.jaydeep17:datetimepicker:0.0.4'
+    //compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'com.google.android.gms:play-services-maps:8.3.0'
 }
