--- a/SourceCode/Android/Zpotdrop/app/build.gradle
+++ b/SourceCode/Android/Zpotdrop/app/build.gradle
@@ -3,6 +3,7 @@
  */
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
@@ -42,5 +43,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.github.jaydeep17:datetimepicker:0.0.4'
     //compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'com.google.android.gms:play-services-gcm:8.3.0'
     compile 'com.google.android.gms:play-services-maps:8.3.0'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
