add crashlytics show user profile when tap on like user

--- a/SourceCode/iOS/ZpotDrop/ZpotDrop/Info.plist
+++ b/SourceCode/iOS/ZpotDrop/ZpotDrop/Info.plist
@@ -31,6 +31,20 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>6</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>fefaf07fa6ce63d33f0beec685433fe9cea4ab92</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>FacebookAppID</key>
 	<string>468622933320724</string>
 	<key>LSRequiresIPhoneOS</key>
